rules/dangling-networkpolicy/test/success_empty_matchlabels/input/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: empty-matchlabels-policy
  namespace: default
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
