rules/dangling-networkpolicy/test/success_empty_matchlabels/input/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: any-pod
  namespace: default
  labels:
    app: web
spec:
  containers:
  - name: app
    image: nginx:latest
